#63 | refactor